--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,13 +38,15 @@ excludes=
 file.reference.jcommon-1.0.23.jar=jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=jfreechart-1.0.19.jar
 file.reference.org.eclipse.paho.client.mqttv3-1.1.0.jar=org.eclipse.paho.client.mqttv3-1.1.0.jar
+file.reference.org.eclipse.paho.client.mqttv3-1.2.2.jar=org.eclipse.paho.client.mqttv3-1.2.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jcommon-1.0.23.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
-    ${file.reference.org.eclipse.paho.client.mqttv3-1.1.0.jar}
+    ${file.reference.org.eclipse.paho.client.mqttv3-1.1.0.jar}:\
+    ${file.reference.org.eclipse.paho.client.mqttv3-1.2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
